// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> should match snapshot 1`] = `
<View
  small={false}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#9898A6",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
        "width": "auto",
      },
    ]
  }
  variant=""
>
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "500",
          "lineHeight": 16,
        },
        {
          "color": "#6B6B78",
        },
      ]
    }
  >
    default
  </Text>
</View>
`;

exports[`<Tag /> should match snapshot when v3Theme is settled 1`] = `
<View
  small={false}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#A6A298",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingBottom": 4,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
        "width": "auto",
      },
    ]
  }
  variant=""
>
  <Text
    style={
      [
        {
          "color": "#1D1D1F",
          "fontFamily": "Inter",
          "fontSize": 12,
          "fontWeight": "700",
          "lineHeight": 16,
        },
        {
          "color": "#57544D",
        },
      ]
    }
  >
    v3Theme
  </Text>
</View>
`;

exports[`<Tag /> should match snapshot with custom icon and informative type 1`] = `
[
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#C1EEDB",
          "borderColor": "#C1EEDB",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="success"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        aria-hidden={true}
        bbHeight={16}
        bbWidth={16}
        fill="#231B22"
        focusable={false}
        height={16}
        marginRight="xxxsmall"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {
                "height": 16,
                "marginRight": 4,
                "width": 16,
              },
            ],
            {
              "opacity": 1,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        width={16}
      >
        <RNSVGGroup
          fill={
            [
              0,
              4280490786,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={{}}
          matrix={
            [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        success with custom icon
      </Text>
    </View>
  </View>,
  <View
    small={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#C1EEDB",
          "borderColor": "#C1EEDB",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
          "width": "auto",
        },
      ]
    }
    variant="success"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNSVGSvgView
        aria-hidden={true}
        bbHeight={12}
        bbWidth={12}
        fill="#231B22"
        focusable={false}
        height={12}
        marginRight="xxxsmall"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {
                "height": 12,
                "marginRight": 4,
                "width": 12,
              },
            ],
            {
              "opacity": 1,
            },
            {
              "flex": 0,
              "height": 12,
              "width": 12,
            },
          ]
        }
        width={12}
      >
        <RNSVGGroup
          fill={
            [
              0,
              4280490786,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={{}}
          matrix={
            [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={
            [
              "fill",
            ]
          }
          rotation={0}
          scaleX={1}
          scaleY={1}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
          vectorEffect={0}
          x={0}
          y={0}
        />
      </RNSVGSvgView>
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        success with custom icon
      </Text>
    </View>
  </View>,
]
`;

exports[`<Tag /> should match snapshot with variant and margin prop  1`] = `
[
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#1D856C",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="success"
  >
    <Text
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#6B6B78",
          },
        ]
      }
    >
      success
    </Text>
  </View>,
  <View
    mv="medium"
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#5340C9",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 20,
          "marginTop": 20,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="informative"
  >
    <Text
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#6B6B78",
          },
        ]
      }
    >
      informative
    </Text>
  </View>,
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#CA4808",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="attention"
  >
    <Text
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#6B6B78",
          },
        ]
      }
    >
      attention
    </Text>
  </View>,
]
`;

exports[`<Tag /> should match snapshot with variant prop 1`] = `
[
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#1D856C",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="success"
  >
    <Text
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#6B6B78",
          },
        ]
      }
    >
      success
    </Text>
  </View>,
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#5340C9",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="informative"
  >
    <Text
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#6B6B78",
          },
        ]
      }
    >
      informative
    </Text>
  </View>,
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#CA4808",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="attention"
  >
    <Text
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#6B6B78",
          },
        ]
      }
    >
      attention
    </Text>
  </View>,
  <View
    small={true}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#CA4808",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
          "width": "auto",
        },
      ]
    }
    variant="attention"
  >
    <Text
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
          {
            "color": "#6B6B78",
          },
        ]
      }
    >
      attention small
    </Text>
  </View>,
]
`;

exports[`<Tag /> should match snapshot with variant prop and informative type 1`] = `
[
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#D7D7E0",
          "borderColor": "#D7D7E0",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="neutral"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        neutral
      </Text>
    </View>
  </View>,
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#C1EEDB",
          "borderColor": "#C1EEDB",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="success"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        success
      </Text>
    </View>
  </View>,
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#E0DFFF",
          "borderColor": "#E0DFFF",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="informative"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        informative
      </Text>
    </View>
  </View>,
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FCD6C3",
          "borderColor": "#FCD6C3",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="attention"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        attention
      </Text>
    </View>
  </View>,
  <View
    small={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FCD6C3",
          "borderColor": "#FCD6C3",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
          "width": "auto",
        },
      ]
    }
    variant="attention"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        attention small
      </Text>
    </View>
  </View>,
]
`;

exports[`<Tag /> should match snapshot with variant prop and informative type with margin prop 1`] = `
[
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#C1EEDB",
          "borderColor": "#C1EEDB",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="success"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        success
      </Text>
    </View>
  </View>,
  <View
    mv="medium"
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#E0DFFF",
          "borderColor": "#E0DFFF",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "marginBottom": 20,
          "marginTop": 20,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="informative"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        informative
      </Text>
    </View>
  </View>,
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FCD6C3",
          "borderColor": "#FCD6C3",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="attention"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        attention
      </Text>
    </View>
  </View>,
]
`;

exports[`<Tag /> should match snapshot with without icon and informative type 1`] = `
[
  <View
    small={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#C1EEDB",
          "borderColor": "#C1EEDB",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
          "width": "auto",
        },
      ]
    }
    variant="success"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        success without icon
      </Text>
    </View>
  </View>,
  <View
    small={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#C1EEDB",
          "borderColor": "#C1EEDB",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
          "width": "auto",
        },
      ]
    }
    variant="success"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "500",
              "lineHeight": 16,
            },
            {
              "color": "#231B22",
            },
          ]
        }
      >
        success without icon
      </Text>
    </View>
  </View>,
]
`;
